deployment.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: test-gke
  labels:
    app: test-gke
spec:
  selector:
    app: test-gke
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: test-gke
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: test-gke
    spec:
      containers:
        - name: test-gke
          image: nottrobin/test-gke
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 1
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
